--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ body
     text-align: center;
     font-size: 18px;
     color: #676767;
+    padding-inline-start: 0px;
   }
   p {
     font-family: 'Lato', sans-serif;
