--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,22 @@
-body 
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+
+body {
+  font-family: 'Caveat', cursive;
+  font-size: 20px;
+  font-weight: normal;
+}
 
   h1 {
     position: relative;
     text-align: center;
     color: #353535;
-    font-size: 50px;
-    font-family: "Cormorant Garamond", serif;
+    font-size: 40px;
   }
   h2 {
     position:relative;
     text-align:center;
     color: #353535;
     font-size: 30px;
-    font-family: "Cormorant Garamond", serif;
   }
   
   #particle-js{
@@ -28,12 +32,19 @@ body
     text-align: center;
 }
 
-  div {text-align: center;}
+  div {
+    text-align: center;
+    font-family: 'Caveat', cursive;
+    font-size: 18px;
+  }
 
-  form {text-align:center}
+  form {
+    text-align:center;
+    font-family: 'Caveat', cursive;
+    font-size: 18px;
+  }
 
   section {
-    font-family: 'Lato', sans-serif;
     font-weight: 300;
     text-align: center;
     font-size: 18px;
@@ -41,7 +52,6 @@ body
     padding-inline-start: 0px;
   }
   p {
-    font-family: 'Lato', sans-serif;
     font-weight: 300;
     text-align: center;
     font-size: 18px;
@@ -52,6 +62,7 @@ body
     margin: 40px auto;
     text-align: center;
   }
+
   button {
     margin: 20px;
   }
@@ -61,7 +72,6 @@ body
     color: #fff;
     border-radius: 5px;
     padding: 10px 25px;
-    font-family: 'Lato', sans-serif;
     font-weight: 500;
     background: transparent;
     cursor: pointer;
