--- a/css/main.css
+++ b/css/main.css
@@ -48,8 +48,12 @@ body {
     justify-content: center;
     text-align: center;
 }
+  .description {
+    font-style: italic;
+    font-weight: bold;
+  }
 
-  div {
+  .photo {
     text-align: center;
     font-family: 'Caveat', cursive;
     font-size: 18px;
