--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
 
 body {
-  font-family: 'Caveat', cursive;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 20px;
   font-weight: normal;
 }
