--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 20px;
   font-weight: normal;
+  background:#F5F5F5;
 }
 
   h1 {
@@ -51,6 +52,7 @@ body {
   .description {
     font-style: italic;
     font-weight: bold;
+    color: #86898f;
   }
 
   .photo {
@@ -76,7 +78,6 @@ body {
     font-weight: 300;
     text-align: center;
     font-size: 18px;
-    color: #676767;
   }
   .frame {
     width: 90%;
