--- a/css/main.css
+++ b/css/main.css
@@ -4,25 +4,46 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 20px;
   font-weight: normal;
-  background:#F5F5F5;
+  /* background:#008B8B; */
+  background-color: #008B8B;
 }
 
   h1 {
     position: relative;
     text-align: center;
-    color: #353535;
+    /* color: #353535; */
     font-size: 40px;
   }
   h2 {
     position:relative;
     text-align:center;
-    color: #353535;
+    /* color: #353535; */
     font-size: 30px;
   }
 
   .container {
 }
 
+.hobbi{
+background-color: #8FBC8F;
+}
+
+.hobbi2{
+  background: #F5F5DC;
+  background-size: 25%;
+  border: thick double #F0FFFF;
+  border-radius: 30px;
+}
+.hobbi3 {
+  background: #F0FFFF;
+  border: thick double #F5F5DC;
+  border-radius: 30px;
+}
+.hobbi4 {
+  background: #8FBC8F;
+  border: thick double #00CED1;
+  border-radius: 30px;
+}
 .container ul {
   margin: 0px;
   padding: 0px;
@@ -33,7 +54,7 @@ body {
 .container li {
   list-style: none;
   display:flexbox;
-  border: 0px solid #cccccc;
+  /* border: 0px solid #cccccc; */
 }
   
   #particle-js{
@@ -41,6 +62,10 @@ body {
     background-color: #e74c3c;
   }
 
+  table{
+    background: url("https://inter.ru/wp-content/uploads/2019/05/%D1%84%D0%BE%D0%BD-11-1400x776.png")98% 86% no-repeat;
+  }
+  
   ul{text-align:center;}
 
   ul li{
@@ -52,7 +77,7 @@ body {
   .description {
     font-style: italic;
     font-weight: bold;
-    color: #86898f;
+    /* color: #86898f; */
   }
 
   .photo {
@@ -71,7 +96,7 @@ body {
     font-weight: 300;
     text-align: center;
     font-size: 18px;
-    color: #676767;
+    /* color: #676767; */
     padding-inline-start: 0px;
   }
   p {
