серые тона, прошёл тему

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
   font-size: 20px;
   font-weight: normal;
   /* background:#008B8B; */
-  background-color: #008B8B;
+  background-color: #A9A9A9;
 }
 
   h1 {
@@ -25,26 +25,21 @@ body {
 }
 
 
-.hobbi{
-background-color: #8FBC8F;
+.bg-1{
 }
 
-.hobbi2{
-  background: #F5F5DC;
-  background-size: 25%;
-  border: thick double #F0FFFF;
+.bg-2{
+}
+
+.bg-3 {
+}
+
+.card {
+  background: #D3D3D3;
+  border: thick double #808080;
   border-radius: 30px;
 }
-.hobbi3 {
-  background: #F0FFFF;
-  border: thick double #F5F5DC;
-  border-radius: 30px;
-}
-.hobbi4 {
-  background: #FFD700;
-  border: thick double #00CED1;
-  border-radius: 30px;
-}
+
 .container ul {
   margin: 0px;
   padding: 0px;
