--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,9 @@ body {
   }
 
   .container {
+    max-width: 750px;
+    margin: auto;
+
 }
 
 
@@ -80,6 +83,11 @@ body {
     text-align: center;
     font-family: 'Caveat', cursive;
     font-size: 18px;
+  }
+
+  .photo-img {
+    box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
   }
 
   form {
