--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,7 @@ body {
   .photo-img {
     box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+    width: 300px;
   }
 
   form {
