--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,17 @@ body {
   padding: 0px 20px;
 }
 
+.link-list {
+  list-style: none;
+  padding: 0;
+}
+
+.link-list li {
+  margin-bottom: 10px;
+  /* border-bottom: 1px solid rgba(186, 186, 186, 0.69); */
+  padding-bottom: 5px;
+}
+
 .container ul {
   margin: 0px;
   overflow: hidden;
@@ -112,6 +123,7 @@ body {
 .container li {
   list-style: none;
   display:flexbox;
+  margin-bottom: 10px;
   /* color: #86898f; */
   /* border: 0px solid #cccccc; */
 }
