--- a/css/main.css
+++ b/css/main.css
@@ -27,22 +27,6 @@ body {
 
 }
 
-.btn {
-  
-}
-
-.btn:active {
-
-}
-
-.btn:hover {
-
-}
-
-.btn:visited {
-
-}
-
 .btn-1 {
   display: inline-block;
   border-radius: 8px;
@@ -114,6 +98,50 @@ body {
   padding-bottom: 5px;
 }
 
+.link {
+  text-align: center;
+}
+
+.form h2 {
+  text-align: center;
+}
+
+.form-group label {
+  display: block;
+  font-size: 14px;
+  color: #86898f;
+}
+
+.form-group textarea,
+.form-group input {
+  width: 100%;
+  box-sizing: border-box;
+  border: none;
+  background: transparent;
+  border-bottom: 1px solid #ccc;
+  color: #000;
+  padding: 15px 0px 10px;
+  outline: none;
+  font-family: inherit;
+}
+
+.form-row {
+  margin-bottom: 10px;
+  display: flex;
+}
+
+.form-row .form-group:last-child{
+  margin-right: 0;
+  width: 50%;
+}
+
+.form-row .form-group {
+  /* display: inline-block; */
+  margin-right: 20px;
+  width: 50%;
+  /* width: calc(50%-20px) */
+}
+
 .container ul {
   margin: 0px;
   overflow: hidden;
@@ -132,6 +160,15 @@ body {
     height: 100vh;
     background-color: #e74c3c;
   }
+  
+  /* .box {
+      width: 32%;
+      border: 1px solid black;
+      background: #D3D3D3;
+      display: inherit;
+      box-sizing: border-box;
+  } */
+
 
   table{
     background: url("https://inter.ru/wp-content/uploads/2019/05/%D1%84%D0%BE%D0%BD-11-1400x776.png")98% 86% no-repeat;
@@ -157,10 +194,14 @@ body {
     font-size: 18px;
   }
 
+  .info {
+    display: flex;
+  }
+
   .photo-img {
     box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    width: 300px;
+    width: 200px;
   }
 
   form {
